--- a/madlibs/style.css
+++ b/madlibs/style.css
@@ -4,6 +4,7 @@ body {
   font-family: "VT323", "Courier New";
   color: white;
 }
+
 .hide {
   display: none;
 }
@@ -32,7 +33,7 @@ form {
 
 h1 {
   text-align: center;
-  font-size:36px;
+  font-size: 36px;
   text-shadow: 1px 1px 1px black;
 }
 
@@ -66,7 +67,7 @@ fieldset {
 
 legend {
   font-size: 20px;
-  margin-left:10%;
+  margin-left: 10%;
 }
 
 input[type="submit"], input[type="reset"] {
@@ -80,20 +81,19 @@ input[type="submit"], input[type="reset"] {
   font-size: 20px;
 }
 
-p{
+p {
   width: 400px;
   font-size: 22px;
-    margin:30%;
-      letter-spacing: 1px;
-      background-color: black;
-      color:pink;
-      text-shadow:1px 1px 1px purple;
-      padding:20px;
-      image:url(hhttps://78.media.tumblr.com/9ef26e21f8f9c4d58bbf539ad63fc37f/tumblr_p3cdru4Vfs1wgcsb4o1_1280.gif);
-      border-style: inset;
+  margin: 30%;
+  letter-spacing: 1px;
+  background-color: black;
+  color: pink;
+  text-shadow: 1px 1px 1px purple;
+  padding: 20px;
+  border-style: inset;
 }
 
-.buttons{
+.buttons {
   position: absolute;
   left: 60%;
   margin: 10px;
@@ -101,16 +101,27 @@ p{
 }
 
 #pic {
-  position:fixed;
-  bottom:60%;
+  position: fixed;
+  bottom: 60%;
   left: 35%;
-  width:500px;
+  width: 500px;
 }
 
-#bun{
-
-    position:fixed;
-  bottom:30%;
+#bun {
+  position: fixed;
+  bottom: 30%;
   left: 60%;
-  width:250px;
+  width: 250px;
+}
+
+footer {
+  clear: both;
+  background: white;
+  opacity: .5;
+  width: 20%;
+  font-size: 19px;
+  margin: auto;
+  border-radius: 100px;
+  text-align: center;
+  bottom: 40%;
 }
