--- a/interactive/wire.css
+++ b/interactive/wire.css
@@ -244,7 +244,7 @@ left:10%;
   text-align:center;
 }
 
-#pl1{
+/* #pl1{
   position:absolute;
   display:none;
   width:200px;
@@ -286,4 +286,4 @@ left:10%;
 
 #hidden{
   display:none;
-}
+} */
